@@ -5,6 +5,7 @@ NSD RELEASE NOTES
 FEATURES:
 	- Synthesize CNAMEs with same TTL as DNAME.
 	- RFC 7344: CDS and CDNSKEY (read in).
+	- hmac sha224, sha384 and sha512 support, patch from David Gwynne.
 BUG FIXES:
 	- Fix endian.h include for OpenBSD.
 	- Fix per-zone query class statistics.
